# dinero

./: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  config.h.meson  configure  configure.ac  libtool  meson.build  meson_options.txt
db/: dinero.sqlite
po/: Makefile.in  POTFILES  POTFILES.in  POTFILES.skip  meson.build  ru.po
src/: Makefile.am  Makefile.in  account_datedetailed.c  account_datedetailed.h  actions.c  actions.h  backup.c  backup.h  category.c  category.h  common.c  common.h  currency.c  currency.h  db.c  db.h  debtcredit_payment.c  debtcredit_payment.h  editaccount.c  editaccount.h  editdebt.c  editdebt.h  editexchange.c  editexchange.h  editexpin.c  editexpin.h  editplan.c  editplan.h  edittransfer.c  edittransfer.h  ex-connection.c  ex-connection.h  ex-grid.c  ex-grid.h  exchange.c  exchange.h  export.c  export.h  gtkdateentry.c  main.c  (+13 more)
src/ui/: account_datedetailed.glade  category.glade  currency.glade  editaccount.glade  editaccount.ui  editaccountcurrency.glade  editcurrency.glade  editcurrency.ui  editdebt.glade  editdebtcredit_payment.glade  editdebtcredit_payment.ui  editexchange.glade  editexpin.glade  editplan.glade  editplan.ui  edittransfer.glade  gridform.glade  gridform.ui  inputdialog.glade  mainform.glade  plan.glade  reminddebt.glade  reminddebt.ui  report.glade
ui/: category.ui  editexpin.ui  edittransfer.ui  export.ui  mainform.ui  report.ui
